<resources>
    <string name="app_name">LoginAppEfe</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido_de_nuevo">Bienvenido nuevamente!</string>
    <string name="iniciar_sesion_registrarse">Iniciar sesión o Registrarse</string>
    <string name="iniciar_sesion">iniciar sesión</string>
    <string name="nombre_apellido">Nombre Apellido</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="homeview">Valores Monedas</string>
    <string name="invalid_mail">Ingrese un email válido</string>
    <string name="invalid_pass">Ingrese una contraseña mayor a 6 dígitos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="enviar">Consultar</string>
    <string name="UF">UF</string>
    <string name="dolar">Dólar</string>
    <string name="euro">Euro</string>
    <string name="utm">UTM</string>
    <string name="bitDolar">Bitcoin en dólares</string>
</resources>